--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,11 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-drawing": "^1.16.1",
+    "@progress/kendo-licensing": "^1.2.1",
+    "@progress/kendo-react-animation": "^4.13.0",
+    "@progress/kendo-react-buttons": "^4.13.0",
+    "@progress/kendo-react-charts": "^4.13.0",
+    "@progress/kendo-react-data-tools": "^4.13.0",
+    "@progress/kendo-react-dateinputs": "^4.13.0",
+    "@progress/kendo-react-dropdowns": "^4.13.0",
+    "@progress/kendo-react-grid": "^4.13.0",
+    "@progress/kendo-react-inputs": "^4.13.0",
+    "@progress/kendo-react-intl": "^4.13.0",
+    "@progress/kendo-react-layout": "^4.13.0",
+    "@progress/kendo-react-popup": "^4.13.0",
+    "@progress/kendo-react-progressbars": "^4.13.0",
+    "@progress/kendo-react-treeview": "^4.13.0",
+    "@progress/kendo-theme-material": "^4.43.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "hammerjs": "^2.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
